--- a/bbsforum/templates/base.html
+++ b/bbsforum/templates/base.html
@@ -29,7 +29,7 @@
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
       <ul class="nav navbar-nav">
         <li class="active"><a style="font-size: 15px;" href="#">Homepage<span class="sr-only">(current)</span></a></li>
-        <li><a style="font-size: 15px;" href="#">Post</a></li>
+        <li><a style="font-size: 15px;" href="{{ url_for('sendpost') }}">Post</a></li>
       </ul>
       <form class="navbar-form navbar-left">
         <div class="form-group">
@@ -38,8 +38,13 @@
         <button style="font-size: 15px;" type="submit" class="btn btn-default">Submit</button>
       </form>
       <ul class="nav navbar-nav navbar-right">
-        <li><a style="font-size: 15px;" href="{{ url_for('login') }}">Login</a></li>
-        <li><a style="font-size: 15px;" href="{{ url_for('register') }}">Register</a></li>
+        {% if user %}
+            <li><a style="font-size: 15px;" href="#">{{ user.username }}</a></li>
+            <li><a style="font-size: 15px;" href="{{ url_for('logout') }}">Logout</a></li>
+        {% else  %}
+            <li><a style="font-size: 15px;" href="{{ url_for('login') }}">Login</a></li>
+            <li><a style="font-size: 15px;" href="{{ url_for('register') }}">Register</a></li>
+        {% endif %}
       </ul>
     </div><!-- /.navbar-collapse -->
   </div><!-- /.container-fluid -->
