--- a/bbsforum/templates/login.html
+++ b/bbsforum/templates/login.html
@@ -11,10 +11,10 @@
     <form action="" method="POST">
         <div class="form-container">
             <div class="form-group">
-                <input type="text" class="form-control" placeholder="user number" >
+                <input type="text" class="form-control" placeholder="user number" name="usernumber">
             </div>
             <div class="form-group">
-                <input type="text" class="form-control" placeholder="password" >
+                <input type="password" class="form-control" placeholder="password" name="password">
             </div>
             <div class="form-group">
                 <button style="font-size: 18px" class="btn btn-primary btn-block">Login</button>
