--- a/bbsforum/templates/register.html
+++ b/bbsforum/templates/register.html
@@ -11,16 +11,16 @@
     <form action="" method="POST">
         <div class="form-container">
             <div class="form-group">
-                <input type="text" class="form-control" placeholder="user number" name="user number" >
+                <input type="text" class="form-control" placeholder="user number" name="usernumber" >
             </div>
             <div class="form-group">
-                <input type="text" class="form-control" placeholder="user name" name="user name" >
+                <input type="text" class="form-control" placeholder="user name" name="username" >
             </div>
             <div class="form-group">
-                <input type="text" class="form-control" placeholder="password" name="password" >
+                <input type="password" class="form-control" placeholder="password" name="password" >
             </div>
             <div class="form-group">
-                <input type="text" class="form-control" placeholder="confirm password" name="cpassword" >
+                <input type="password" class="form-control" placeholder="confirm password" name="cpassword" >
             </div>
             <div class="form-group">
                 <button style="font-size: 18px" class="btn btn-primary btn-block">Register</button>
