--- a/bbsforum/templates/base.html
+++ b/bbsforum/templates/base.html
@@ -28,7 +28,7 @@
     <!-- Collect the nav links, forms, and other content for toggling -->
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
       <ul class="nav navbar-nav">
-        <li class="active"><a style="font-size: 15px;" href="#">Homepage<span class="sr-only">(current)</span></a></li>
+        <li class="active"><a style="font-size: 15px;" href="/">Homepage<span class="sr-only">(current)</span></a></li>
         <li><a style="font-size: 15px;" href="{{ url_for('sendpost') }}">Post</a></li>
       </ul>
       <form class="navbar-form navbar-left">
