--- a/bbsforum/templates/detail.html
+++ b/bbsforum/templates/detail.html
@@ -23,14 +23,18 @@
             <input type="hidden" name="posts_id" value="{{ posts.id }}">
         </div>
         <div class="form-group" style="text-align: right">
-            <button class="btn btn-primary">commit</button>
+            <button class="btn btn-primary">submit</button>
         </div>
     </form>
     <ul class="comment-ul">
         {% for comment in posts.comments %}
             <li>
                 <div class="user-info">
-                    <img src="{{ url_for('static', filename='images/mudkip.png') }}" alt="" class="avatar">
+                      {%  if comment.author.photo  %}
+                            <img src="{{ url_for('static', filename=comment.author.photo) }}" alt="" class="avatar">
+                      {% else %}
+                            <img src="{{ url_for('static', filename='images/mudkip.png') }}" alt="" class="avatar">
+                      {% endif %}
                     <span class="username">{{ comment.author.username }}</span>
                     <span class="create_time"> {{ comment.create_time }}</span>
                 </div>
